# meta_genie

./: .gitignore  CLAUDE.md  GEMINI.md  llm_secondary_filter.py  pipeline_hybrid_filter.py  pyproject.toml  requirements.txt  rule_based_filter.py  streamlit_keyword_review.py  streamlit_keyword_review_local.py
.devcontainer/: devcontainer.json
data/: meta_article_data.csv  meta_article_empty_abstract_data.csv
data/sample/: meta_article_data_10.csv
extract_abstract/: abstract-depression-set.txt  extract_by_title_matching.py
rule_base_output/: rule_based_results_20250702_081407.csv
templates/: keyword_template.md  keyword_template_en.md
